--- a/Views/Doctor/docindex.html
+++ b/Views/Doctor/docindex.html
@@ -14,8 +14,8 @@
                 <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Doctor/DocIndex.html">Doctors</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#">Register</a></li>
-                <li><a href="#">Log in</a></li>
+                <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Account/Register.html">Register</a></li>
+                <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Account/Login.html">Log in</a></li>
             </ul>
         </nav>
     </header>
@@ -54,7 +54,7 @@
                     <td>Emergency</td>
                     <td>MBBS,FRCEM</td>
                     <td>Yes</td>
-                    <td><button>Check Availability</button></td>
+                    <td><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Appointment/createappointment.html">Create Appointment</a></td>
                 </tr>
                 <tr>
                     <td>Dr.Danny</td>
@@ -62,7 +62,7 @@
                     <td>Denistry</td>
                     <td>DDS</td>
                     <td>Yes</td>
-                    <td><button>Check Availability</button></td>
+                    <td><a href="/create-appointment">Create Appointment</a></td>
                 </tr>
                 <tr>
                     <td>Dr.Joey</td>
@@ -70,7 +70,7 @@
                     <td>Neurology</td>
                     <td>MBBS,MD</td>
                     <td>Yes</td>
-                    <td><button>Check Availability</button></td>
+                    <td><a href="/create-appointment">Create Appointment</a></td>
                 </tr>
                 <tr>
                     <td>Dr.Kenneth</td>
@@ -78,7 +78,7 @@
                     <td>Radiology</td>
                     <td>MBBS,DO</td>
                     <td>Yes</td>
-                    <td><button>Check Availability</button></td>
+                    <td><a href="/create-appointment">Create Appointment</a></td>
                 </tr>
                 <tr>
                     <td>Dr.Maria</td>
@@ -86,7 +86,7 @@
                     <td>Gynecology</td>
                     <td>MBBS,MD</td>
                     <td>Yes</td>
-                    <td><button>Check Availability</button></td>
+                    <td><a href="/create-appointment">Create Appointment</a></td>
                 </tr>
                 <tr>
                     <td>Dr.Shelly</td>
@@ -94,7 +94,7 @@
                     <td>Dietician</td>
                     <td>MBBS,RDN</td>
                     <td>Yes</td>
-                    <td><button>Check Availability</button></td>
+                    <td><a href="/create-appointment">Create Appointment</a></td>
                 </tr>
             </tbody>
         </table>
