--- a/Views/Appointment/Editappointment.html
+++ b/Views/Appointment/Editappointment.html
@@ -2,21 +2,20 @@
 <html>
 <head>
     <title>Edit Appointment</title>
-    <link rel="stylesheet" type="text/css" href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/css/appointmentindex.css">
+    <link rel="stylesheet" type="text/css" href="../../css/appointmentindex.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/index.html">Home</a></li>
-                <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Doctor/DocIndex.html">Doctors</a></li>
-                <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Appointment/Details.html">My Appointments</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">My account</a></li>
-                <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/index.html">Log out</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Views/Doctor/docindex.html">Doctors</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="Views/Account/Login.html" class="btn btn-login">Login</a></li>
+                <li><a href="Views/Account/Register.html" class="btn btn-register">Register</a></li>
             </ul>
         </nav>
+        <br><br>
     </header>
 <div class="row">
     <div class="col-md-12">
@@ -48,3 +47,24 @@
             <button type="submit">Save</button>
         </form>
     </div>
+</div>
+<br><br><br><br><br>
+</body>
+<footer>
+    <div class="footer-container">
+            <div class="footer-section">
+                <h4>Contact Us</h4>
+                <p>Email: support@docappointments.com</p>
+                <p>Phone: +1 234 567 8900</p>
+                <p>Address: 123 Health St, Wellness City</p>
+            </div>
+            <div class="footer-section">
+                <h4>Follow Us</h4>
+                <div class="social-links">
+                   <p><a href="https://facebook.com">Facebook</a></pr>
+                   <p><a href="https://twitter.com">Twitter</a></p>
+                    <p><a href="https://instagram.com">Instagram</a></p>
+                </div>
+            </div>
+    </div>
+</footer>
