--- a/Views/Appointment/Myappointments.html
+++ b/Views/Appointment/Myappointments.html
@@ -2,19 +2,19 @@
 <html>
 <head>
     <title>Appointment Details</title>
-    <link rel="stylesheet" type="text/css" href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/css/appointmentindex.css">
+    <link rel="stylesheet" type="text/css" href="../../css/appointmentindex.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/index.html">Home</a></li>
-                <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Doctor/DocIndex.html">Doctors</a></li>
-                <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Appointment/Details.html">My Appointments</a></li>
+                <li><a href="">Home</a></li>
+                <li><a href="../../Views/Doctor/DocIndex.html">Doctors</a></li>
+                <li><a href="../../Views/Appointment/Details.html">My Appointments</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">My account</a></li>
-                <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/index.html">Log out</a></li>
+                <li><a href="../../index.html">Log out</a></li>
             </ul>
         </nav>
     </header>
@@ -34,7 +34,7 @@
         </thead>
         <tbody>
             <tr>
-                <td>Alex</td>
+                <td>Ben</td>
                 <td>Dr.Danny</td>
                 <td>Dentistry</td>
                 <td>2024-04-25</td>
@@ -47,21 +47,204 @@
                 </td>
             </tr>
             <tr>
-                <td>Alex</td>
+                <td>Toy</td>
                 <td>Dr.Joey</td>
                 <td>Nuerology</td>
                 <td>2024-04-15</td>
                 <td>10:30 AM</td>
                 <td>Migrane</td>
                 <td class="actions">
-                    <button class="edit-button" onclick="window.location.href='/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Appointment/Editappointment.html'">Edit</button>
-                    <button class="details-button" onclick="window.location.href='/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Appointment/Details.html'">Details</button>
+                    <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
+                    <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
                     <button class="delete-button"onclick="window.location.href=''">Delete</button>
                 </td>
             </tr>
+            <tr>
+                <td>Alex</td>
+                <td>Dr.Asfi</td>
+                <td>Emergency</td>
+                <td>2024-05-15</td>
+                <td>02:00 PM</td>
+                <td>Chest Pain</td>
+                <td class="actions">
+                    <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
+                    <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
+                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Emma</td>
+                <td>Dr.Danny</td>
+                <td>Dentistry</td>
+                <td>2024-05-20</td>
+                <td>11:00 AM</td>
+                <td>Dental Checkup</td>
+                <td class="actions">
+                    <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
+                    <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
+                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Liam</td>
+                <td>Dr.Joey</td>
+                <td>Neurology</td>
+                <td>2024-06-10</td>
+                <td>10:00 AM</td>
+                <td>Headache</td>
+                <td class="actions">
+                    <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
+                    <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
+                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Olivia</td>
+                <td>Dr.Kenneth</td>
+                <td>Radiology</td>
+                <td>2024-06-18</td>
+                <td>09:30 AM</td>
+                <td>X-Ray</td>
+                <td class="actions">
+                    <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
+                    <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
+                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Noah</td>
+                <td>Dr.Maria</td>
+                <td>Gynecology</td>
+                <td>2024-07-05</td>
+                <td>01:00 PM</td>
+                <td>Regular Checkup</td>
+                <td class="actions">
+                    <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
+                    <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
+                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Sophia</td>
+                <td>Dr.Shelly</td>
+                <td>Dietician</td>
+                <td>2024-07-22</td>
+                <td>03:00 PM</td>
+                <td>Nutrition Plan</td>
+                <td class="actions">
+                    <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
+                    <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
+                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                </td>
+            </tr>
+            <tr>
+                <td>William</td>
+                <td>Dr.Asfi</td>
+                <td>Emergency</td>
+                <td>2024-08-16</td>
+                <td>02:30 PM</td>
+                <td>Accident Injury</td>
+                <td class="actions">
+                    <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
+                    <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
+                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Isabella</td>
+                <td>Dr.Danny</td>
+                <td>Dentistry</td>
+                <td>2024-08-20</td>
+                <td>10:00 AM</td>
+                <td>Wisdom Teeth Removal</td>
+                <td class="actions">
+                    <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
+                    <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
+                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                </td>
+            </tr>
+            <tr>
+                <td>James</td>
+                <td>Dr.Joey</td>
+                <td>Neurology</td>
+                <td>2024-09-15</td>
+                <td>11:30 AM</td>
+                <td>EEG Test</td>
+                <td class="actions">
+                    <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
+                    <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
+                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Charlotte</td>
+                <td>Dr.Kenneth</td>
+                <td>Radiology</td>
+                <td>2024-10-05</td>
+                <td>08:45 AM</td>
+                <td>CT Scan</td>
+                <td class="actions">
+                    <button class="edit-button" onclick="window.location.href='../../Views/Appointment/Editappointment.html'">Edit</button>
+                    <button class="details-button" onclick="window.location.href='../../Views/Appointment/Details.html'">Details</button>
+                    <button class="delete-button"onclick="window.location.href=''">Delete</button>
+                </td>
+            </tr>
+            
         </tbody>
     </table>
     
     <p>&copy; 2024 - HealHive LLC</p>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            // Event delegation to handle click for all delete buttons
+            const tableBody = document.querySelector('table tbody');
+            tableBody.addEventListener('click', function(event) {
+                if (event.target.matches('.delete-button')) {
+                    // Confirm deletion with the user
+                    if (confirm('Are you sure you want to delete this appointment?')) {
+                        // Get the parent row (tr) of the clicked delete button
+                        const rowToDelete = event.target.closest('tr');
+        
+                        // Get the index of the row within the tbody
+                        const rowIndex = Array.from(tableBody.querySelectorAll('tr')).indexOf(rowToDelete);
+        
+                        // Now, rowIndex is the unique identifier (0-based index) for the row to delete
+                        // Perform your deletion logic here. For instance:
+                        // sendDeleteRequestToServer(rowIndex); // You would define this function
+                        
+                        // For immediate front-end deletion:
+                        rowToDelete.remove();
+                    }
+                }
+            });
+        });
+        
+        // Example server deletion request function (you need to implement the server-side)
+        function sendDeleteRequestToServer(rowIndex) {
+            console.log('Sending delete request to the server for row:', rowIndex);
+            // You would typically use `fetch` or `XMLHttpRequest` to send the deletion request to your server.
+        }
+        </script>
+        
+    <br><br><br>
+            
 </body>
+<footer>
+    <div class="footer-container">
+            <div class="footer-section">
+                <h4>Contact Us</h4>
+                <p>Email: support@docappointments.com</p>
+                <p>Phone: +1 234 567 8900</p>
+                <p>Address: 123 Health St, Wellness City</p>
+            </div>
+            <div class="footer-section">
+                <h4>Follow Us</h4>
+                <div class="social-links">
+                   <p><a href="https://facebook.com">Facebook</a></pr>
+                   <p><a href="https://twitter.com">Twitter</a></p>
+                    <p><a href="https://instagram.com">Instagram</a></p>
+                </div>
+            </div>
+    </div>
+</footer>
 </html>
