--- a/Views/Doctor/docindex.html
+++ b/Views/Doctor/docindex.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doctors</title>
-    <link rel="stylesheet" href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/css/doctorindex.css">
+    <link rel="stylesheet" href="../../css/doctorindex.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/index.html">Hospital</a></li>
-                <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Doctor/DocIndex.html">Doctors</a></li>
+                <li><a href="../../index.html">Hospital</a></li>
+                <li><a href="../../Views/Doctor/docindex.html">Doctors</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Account/Register.html">Register</a></li>
-                <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Account/Login.html">Log in</a></li>
+                <li><a href="../../Views/Account/Register.html">Register</a></li>
+                <li><a href="../../Views/Account/Login.html">Log in</a></li>
             </ul>
         </nav>
     </header>
@@ -54,7 +53,7 @@
                     <td>Emergency</td>
                     <td>MBBS,FRCEM</td>
                     <td>Yes</td>
-                    <td><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Appointment/createappointment.html">Create Appointment</a></td>
+                    <td><a href="../../Views/Appointment/createappointment.html">Create Appointment</a></td>
                 </tr>
                 <tr>
                     <td>Dr.Danny</td>
@@ -100,8 +99,27 @@
         </table>
     </main>
 
-    <footer>
-        &copy; 2024 - Hospital LLC
-    </footer>
+   
+    <br><br><br><br><br>
+
 </body>
+
+<footer>
+    <div class="footer-container">
+            <div class="footer-section">
+                <h4>Contact Us</h4>
+                <p>Email: support@docappointments.com</p>
+                <p>Phone: +1 234 567 8900</p>
+                <p>Address: 123 Health St, Wellness City</p>
+            </div>
+            <div class="footer-section">
+                <h4>Follow Us</h4>
+                <div class="social-links">
+                   <p><a href="https://facebook.com">Facebook</a></pr>
+                   <p><a href="https://twitter.com">Twitter</a></p>
+                    <p><a href="https://instagram.com">Instagram</a></p>
+                </div>
+            </div>
+    </div>
+</footer>
 </html>
