--- a/Views/Account/Login.html
+++ b/Views/Account/Login.html
@@ -2,17 +2,16 @@
 <html>
 <head>
     <title>Log in</title>
-    <link rel="stylesheet" href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/css/login.css">
+    <link rel="stylesheet" href="../../css/login.css">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/index.html">Home</a></li>
-            <li><a href="/Users/Afrah/Documents/GitHub/Assignment\_LookAndFeel/Views/Doctor/DocIndex.html">Doctors</a></li>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="../Doctor/docindex.html">Doctors</a></li>
             <li><a href="/about">About</a></li>
-            <li><a href="/contact">Contact</a></li>
-            <li><a href="/Users/Afrah/Documents/GitHub/Assignment\_LookAndFeel/Views/Account/Login.html" class="btn btn-login">Login</a></li>
-            <li><a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Account/Register.html" class="btn btn-register">Register</a></li>
+            <li><a href="../Account/Login.html"btn btn-login">Login</a></li>
+            <li><a href="../Account/Register.html" class="btn btn-register">Register</a></li>
         </ul>
     </nav>
     <h2>Log in now!</h2>
@@ -51,12 +50,31 @@
                         </div>
                     </div>
                     <p>
-                        <a href="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/Views/Account/Register.html">Register</a> If you don't have an account.
+                        <a href="../Account/Register.html">Register</a> If you don't have an account.
                     </p>
                 </form>
             </section>
         </div>
     </div>
-    <script src="/Users/Afrah/Documents/GitHub/Assignment_LookAndFeel/js/login.js"></script>
+    <script src="../../js/login.js"></script>
+    <br><br><br><br><br>
 </body>
+<footer>
+    <div class="footer-container">
+            <div class="footer-section">
+                <h4>Contact Us</h4>
+                <p>Email: support@docappointments.com</p>
+                <p>Phone: +1 234 567 8900</p>
+                <p>Address: 123 Health St, Wellness City</p>
+            </div>
+            <div class="footer-section">
+                <h4>Follow Us</h4>
+                <div class="social-links">
+                   <p><a href="https://facebook.com">Facebook</a></pr>
+                   <p><a href="https://twitter.com">Twitter</a></p>
+                    <p><a href="https://instagram.com">Instagram</a></p>
+                </div>
+            </div>
+    </div>
+</footer>
 </html>
