--- a/css/doctorindex.css
+++ b/css/doctorindex.css
@@ -56,9 +56,44 @@ th {
     background-color: #f2f2f2;
 }
 
-/* Footer */
+
+/* Basic Styling for Footer */
 footer {
-    background-color: #f2f2f2;
-    padding: 10px;
-    text-align: center;
-}
+    background-color: #56bb8a;
+    color: #333;
+    padding: 20px 0;
+    font-size: 14px;
+  }
+  
+  .footer-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: start;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+  
+  .footer-section h4 {
+    color: #000;
+    margin-bottom: 10px;
+  }
+  
+  .footer-section ul,
+  .footer-section p {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .footer-section ul li a,
+  .footer-section {
+    color: #555;
+    text-decoration: none;
+    transition: color 0.3s;
+  }
+  
+  .footer-section ul li a:hover,
+  .footer-section a:hover {
+    color: #007bff;
+  }
+  
